--- a/resources/package.json
+++ b/resources/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
 	"homebridge": "nfarina/homebridge#master",
 	"homebridge-jeedom": "NebzHB/homebridge-jeedom#beta",
-	"homebridge-camera-ffmpeg": "NebzHB/homebridge-camera-ffmpeg#master"
+	"homebridge-camera-ffmpeg": "NebzHB/homebridge-camera-ffmpeg#master",
+	"homebridge-alexa": "NorthernMan54/homebridge-alexa#master"
   }
 }
